--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -12,6 +12,8 @@ RUN apt-get install -yqq libxml2-dev libxslt1-dev build-essential patch ruby-dev
 # RUN gem install nokogiri selenium-webdriver ffi ruby-debug-ide tilt debase
 RUN gem install nokogiri selenium-webdriver ffi ruby-debug-ide tilt
 
+RUN apt-get install -y libsodium-dev
+
 # node
 RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -
 RUN apt-get install -y nodejs
