--- a/gems.yml
+++ b/gems.yml
@@ -1,10 +1,10 @@
 gems:
   avo: "./avo"
-  avo-advanced: "./avo-advanced"
-  avo-pro: "./avo-pro"
-  avo-dynamic_filters: "./avo-dynamic_filters"
   avo-dashboards: "./avo-dashboards"
   avo-menu: "./avo-menu"
-  avo-forms: "./avo-forms"
-  avo-kanban: "./avo-kanban"
-  testy: "./testy"
+  avo-pro: "./avo-pro"
+  avo-dynamic_filters: "./avo-dynamic_filters"
+  avo-advanced: "./avo-advanced"
+  # avo-forms: "./avo-forms"
+  # avo-kanban: "./avo-kanban"
+  # testy: "./testy"
