--- a/.github/workflows/feature-tests.yml
+++ b/.github/workflows/feature-tests.yml
@@ -73,8 +73,7 @@ jobs:
         path: vendor/bundle
         key: ${{ runner.os }}-test-gems-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
-          ${{ runner.os }}-test-gems-
-        save-always: true
+          ${{ runner.os }}-test-gems-${{ hashFiles('**/Gemfile.lock') }}
 
     - name: Get yarn cache directory path
       id: test-yarn-cache-dir-path
@@ -86,8 +85,7 @@ jobs:
         path: ${{ steps.test-yarn-cache-dir-path.outputs.dir }}
         key: ${{ runner.os }}-test-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
-          ${{ runner.os }}-test-yarn-
-        save-always: true
+          ${{ runner.os }}-test-yarn-${{ hashFiles('**/yarn.lock') }}
 
     - name: Clone Avo repositories
       shell: bash
